# ChangeLog for app-arch/p7zip
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/p7zip/ChangeLog,v 1.108 2009/05/01 20:52:19 arfrever Exp $

  01 May 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  p7zip-4.65.ebuild:
  Rename "wxwindows" USE flag to "wxwidgets".

  01 May 2009; Jeroen Roovers <jer@gentoo.org> p7zip-4.65.ebuild:
  Restore dropped keywords.

  27 Apr 2009; Tomas Chvatal <scarabeus@gentoo.org> p7zip-4.65.ebuild:
  Few build system updates. Make it work with kde4.

*p7zip-4.65 (26 Apr 2009)

  26 Apr 2009; Patrick Lauer <patrick@gentoo.org>
  +files/4.65-hardlink.patch, +files/4.65-makefile.patch, metadata.xml,
  +p7zip-4.65.ebuild:
  Bump to 4.65, closes #249780. Based on the ebuild by jlec, incorporating
  changes from Flameeyes, Sergey Dryabzhinsky, Ilya Kashirin, A.C.Heron and
  Chi-Thanh Christopher Nguyen.

  25 Jan 2009; Radoslaw Stachowiak <radek@gentoo.org> p7zip-4.58.ebuild:
  Removed unnecesary warning as per bug #126722

  27 Dec 2008; Jeremy Olexa <darkside@gentoo.org> p7zip-4.58.ebuild:
  amd64 stable, bug #236591

  05 Dec 2008; Raúl Porcel <armin76@gentoo.org> p7zip-4.58.ebuild:
  x86 stable wrt #236591

  12 Nov 2008; Brent Baude <ranger@gentoo.org> p7zip-4.58.ebuild:
  stable ppc64, bug 236591

  08 Nov 2008; nixnut <nixnut@gentoo.org> p7zip-4.58.ebuild:
  Stable on ppc wrt bug 236591

  07 Nov 2008; Jeroen Roovers <jer@gentoo.org> p7zip-4.58.ebuild:
  Stable for HPPA (bug #236591).

  06 Nov 2008; Ferris McCormick <fmccor@gentoo.org> p7zip-4.58.ebuild:
  Sparc stable, Bug #236591.

  04 Sep 2008; Mike Frysinger <vapier@gentoo.org> p7zip-4.58.ebuild:
  Use newbin instead of ugly mv && dobin.

*p7zip-4.58 (20 Jul 2008)

  20 Jul 2008; Hanno Boeck <hanno@gentoo.org> +p7zip-4.58.ebuild:
  Version bump.

  21 Mar 2008; Radoslaw Stachowiak <radek@gentoo.org>
  -files/p7zip-4.55-open_lzma_alone.patch, -p7zip-4.55-r1.ebuild: